[gd_scene load_steps=6 format=3 uid="uid://wop0l75iqvv1"]

[ext_resource type="Script" path="res://scene/ui/card/small_card.gd" id="1_laef3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fk0j"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.619608, 0.619608, 0.619608, 1)
shadow_color = Color(0.619608, 0.619608, 0.619608, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="FontVariation" id="FontVariation_b4g6r"]
variation_embolden = 0.5

[sub_resource type="FontVariation" id="FontVariation_sxk2e"]

[sub_resource type="FontVariation" id="FontVariation_kid30"]
variation_transform = Transform2D(1, 0.3, 0, 1, 0, 0)
spacing_top = -2
spacing_bottom = -2

[node name="Panel" type="PanelContainer" node_paths=PackedStringArray("title_label", "description_label", "flavor_text_label", "label_container", "label_super_container", "title_description_separator", "icon")]
offset_right = 197.0
offset_bottom = 66.0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fk0j")
script = ExtResource("1_laef3")
title_label = NodePath("HBoxContainer/LabelSuperContainer/VBoxContainer/HBoxContainer/Title")
description_label = NodePath("HBoxContainer/LabelSuperContainer/VBoxContainer/HBoxContainer/Description")
flavor_text_label = NodePath("HBoxContainer/LabelSuperContainer/VBoxContainer/FlavorText")
label_container = NodePath("HBoxContainer/LabelSuperContainer/VBoxContainer")
label_super_container = NodePath("HBoxContainer/LabelSuperContainer")
title_description_separator = NodePath("HBoxContainer/LabelSuperContainer/VBoxContainer/HBoxContainer/ColorRect")
icon = NodePath("HBoxContainer/AspectRatioContainer/Icon/SubViewport")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Icon" type="SubViewportContainer" parent="HBoxContainer/AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/AspectRatioContainer/Icon"]
disable_3d = true
handle_input_locally = false
size = Vector2i(64, 48)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/AspectRatioContainer/Icon/SubViewport"]

[node name="LabelSuperContainer" type="MarginContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LabelSuperContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LabelSuperContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Title" type="RichTextLabel" parent="HBoxContainer/LabelSuperContainer/VBoxContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/normal_font = SubResource("FontVariation_b4g6r")
theme_override_font_sizes/normal_font_size = 14
text = "TITLE"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/LabelSuperContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Description" type="RichTextLabel" parent="HBoxContainer/LabelSuperContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_sxk2e")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "DESCRIPTION"
fit_content = true
autowrap_mode = 0

[node name="FlavorText" type="RichTextLabel" parent="HBoxContainer/LabelSuperContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 0.490196)
theme_override_fonts/normal_font = SubResource("FontVariation_kid30")
theme_override_font_sizes/normal_font_size = 10
text = "FLAVOR TEXT"
fit_content = true
autowrap_mode = 0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
